tests/errors/test-error-009.slax
version 1.0;

match / {
    <top> {
	var $x = "one;
	<more> {
	    var $y = "two " _ this _ " three";
	}
    }
}
